[ITB-2102, ITB-2116] Configurable SOAP and REST API test service callbacks and callback API keys
